--- a/src/app/feature/cargame/components/landing-game/landing-game.component.html
+++ b/src/app/feature/cargame/components/landing-game/landing-game.component.html
@@ -1,1 +1,22 @@
-<p>landing-game works!</p>
+<div class="hero-image">
+</div>
+
+<div class="container-fluid mt-feature">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 features">
+            <img src="https://i.pinimg.com/originals/8b/16/7a/8b167af653c2399dd93b952a48740620.jpg" alt="">
+            <h3>Sebastian Pineda</h3>
+            <p>Consultor de desarrollo</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 features">
+            <img src="https://i.pinimg.com/originals/8b/16/7a/8b167af653c2399dd93b952a48740620.jpg" alt="">
+            <h3>Josue Ardila</h3>
+            <p>Consultor de desarrollo</p>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 features">
+            <img src="https://i.pinimg.com/originals/8b/16/7a/8b167af653c2399dd93b952a48740620.jpg" alt="">
+            <h3>Steven Calderon</h3>
+            <p>Consultor de desarrollo</p>
+        </div>
+    </div>
+</div>
