Se agrega la funcionalidad de logout

--- a/src/app/feature/cargame/components/home/home.component.html
+++ b/src/app/feature/cargame/components/home/home.component.html
@@ -1,3 +1,2 @@
-
-<app-toolbar [items]="routescar" [title]="title"></app-toolbar>
- <router-outlet></router-outlet>
+<app-toolbar [items]="routescar" [title]="title" (logout)="logout($event)"></app-toolbar>
+<router-outlet></router-outlet>
