--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -7,11 +7,8 @@
     <span class="menu-spacer"></span>
     <app-navbar [items]="items"></app-navbar>
     <span class="example-spacer"></span>
-    <button
-      mat-icon-button
-      class="example-icon favorite-icon"
-      aria-label="Example icon-button with heart icon"
-    >
+    <button mat-icon-button class="example-icon favorite-icon" (click)="exit()"
+      aria-label="Example icon-button with heart icon">
       <mat-icon>exit_to_app</mat-icon>
     </button>
   </mat-toolbar-row>
