Prueba inicial del juego

--- a/src/app/feature/cargame/components/start-game/start-game.component.html
+++ b/src/app/feature/cargame/components/start-game/start-game.component.html
@@ -1,1 +1,6 @@
-<p>start-game works!</p>
+<div class="pista">
+    <div class="carril" *ngFor="let carro of carros">
+        <img class="carrito" [src]="getColorCarroById(carro.id)" [id]="getNombreIdCar(carro.id)" />
+        <button (click)="updatePosition(carro.id)">mover carro {{carro.id}}</button>
+    </div>
+</div>
