Se crea estructuras para los modelos

--- a/src/app/feature/cargame/components/create-game/create-game.component.scss
+++ b/src/app/feature/cargame/components/create-game/create-game.component.scss
@@ -60,7 +60,7 @@ h2 {
     font-weight: bold;
     text-transform: uppercase;
     color: $prima;
-    font-family: MuseoSans;
+    font-family: "Fontdiner Swanky";
     font-size: medium;
   }
 }
