--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button mat-icon-button>
-      <mat-icon [routerLink]="title.url">directions_car</mat-icon>
+    <button mat-icon-button [routerLink]="title.url">
+      <mat-icon>directions_car</mat-icon>
     </button>
     <h1>{{title.nombre}}</h1>
     <span class="menu-spacer"></span>
