--- a/src/app/feature/cargame/components/create-game/create-game.component.html
+++ b/src/app/feature/cargame/components/create-game/create-game.component.html
@@ -29,9 +29,9 @@
                                     <mat-form-field appearance="standard" [style.width.%]="100">
                                         <mat-label>Kilometro</mat-label>
                                         <input matInput id="kilometros" type="number" formControlName="kilometros"
-                                            min="1" required />
+                                            min="1" max="3" required />
                                         <mat-error *ngIf="isValidFieldDatosJuegoForm('kilometros')">
-                                            El kilometraje debe ser mayor a 0
+                                            Solo se permite un kilometraje entre 1 y 3
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
