Se implementa el juego conectandose al websocket

--- a/src/app/feature/cargame/components/create-game/create-game.component.scss
+++ b/src/app/feature/cargame/components/create-game/create-game.component.scss
@@ -11,7 +11,7 @@ h2 {
   text-align: center;
 }
 .image-bg {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(rgba(63,81,181,0.4), rgba(63,81,181,0.4)),
     url(https://w0.peakpx.com/wallpaper/926/421/HD-wallpaper-red-fast-car-race.jpg);
   height: calc(100vh - 64px);
   width: 100%;
