--- a/src/app/feature/cargame/components/landing-game/landing-game.component.scss
+++ b/src/app/feature/cargame/components/landing-game/landing-game.component.scss
@@ -1,5 +1,5 @@
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image:linear-gradient(rgba(63,81,181,0.4), rgba(63,81,181,0.4)),
     url(https://c4.wallpaperflare.com/wallpaper/586/520/1018/car-ferrari-f40-reflection-wallpaper-preview.jpg);
   height: 60vh;
   opacity: 0.9;
