--- a/src/app/feature/cargame/components/start-game/start-game.component.scss
+++ b/src/app/feature/cargame/components/start-game/start-game.component.scss
@@ -1,4 +1,89 @@
+@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);
+$border-radius: 20px;
 .carrito {
-  width: 100px;
-  height: 70px;
+  width: 20%;
+  height: 50%;
+  top: 50%;
+}
+.pista {
+  width: 100%;
+  display: block;
+  height: calc(100vh - 64px);
+}
+.carril {
+  background-image: url("https://thumbs.dreamstime.com/b/start-finish-line-racing-track-marking-car-karting-road-race-rally-vector-background-123249599.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: left top;
+  display: flex;
+  align-items: center;
+}
+.row {
+  padding-right: 0;
+  max-width: 100%;
+}
+.info-game {
+  width: 100%;
+  height: calc(100vh - 64px);
+}
+
+img {
+  max-width: 100%;
+}
+
+.box {
+  margin-left: 0.5em;
+  margin-top: 0.5em;
+  background: #f0f0f0;
+  width: 100%;
+  border-radius: 3px;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25);
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  h1 {
+    font-size: 1.5em;
+    text-align: center;
+  }
+  .temp {
+    font-size: 5em;
+    line-height: 1;
+    text-align: center;
+    display: block;
+    margin: auto;
+  }
+}
+.weather .icon {
+  position: relative;
+  margin: 0 auto;
+}
+.spin {
+  width: 100%;
+}
+
+.bubble.black {
+  background-color: #313e48;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  padding: 0px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+  align-items: center;
+}
+
+//Animation
+.spin img {
+  width: 100%;
+  animation: spin 5s linear infinite;
+  animation-play-state: running;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(1turn);
+  }
 }
