--- a/src/app/feature/cargame/components/create-game/create-game.component.html
+++ b/src/app/feature/cargame/components/create-game/create-game.component.html
@@ -95,8 +95,11 @@
                                         Regresar
                                     </button>
                                 </div>
-                                <div class="col-xs-12 col-md-6">
-                                    <button class="btn-crear mt-5" type="submit" color="primary" mat-raised-button>
+                                <div class="col-xs-12 col-md-6"
+                                    matTooltip="Se necesitan exactamente 3 jugadores para jugar"
+                                    [matTooltipDisabled]="jugadoresListos()">
+                                    <button class="btn-crear mt-5" type="submit" color="primary"
+                                        [disabled]="!jugadoresListos()" mat-raised-button>
                                         Continuar
                                     </button>
                                 </div>
