--- a/src/app/feature/cargame/components/start-game/start-game.component.scss
+++ b/src/app/feature/cargame/components/start-game/start-game.component.scss
@@ -12,7 +12,7 @@ $border-radius: 20px;
   height: calc(100vh - 64px);
 }
 .carril {
-  background-image: url("https://thumbs.dreamstime.com/b/start-finish-line-racing-track-marking-car-karting-road-race-rally-vector-background-123249599.jpg");
+  background-image: url("../../../../../assets/images/carril.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: left top;
